# wash-shell

./: CMakeLists.txt  README  README.md  wash.c
commands/: cat.c  head_nine.c  ls.c  tail.c  wc.c
